--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "pbmedia/laravel-ffmpeg": "^7.5",
+        "stripe/stripe-php": "^7.107",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
