--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "laravel/tinker": "^2.5",
         "pbmedia/laravel-ffmpeg": "^7.5",
         "stripe/stripe-php": "^7.107",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "fakerphp/faker": "^1.9.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
